# ChangeLog for app-portage/layman
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.225 2015/02/08 18:50:41 dolsen Exp $

*layman-2.3.0 (08 Feb 2015)

  08 Feb 2015; Brian Dolbec <dolsen@gentoo.org> +layman-2.3.0.ebuild,
  layman-9999.ebuild:
  Version bump. Add portage plugin USE flag and installation to layman-9999.

  17 Jan 2015; Patrick Lauer <patrick@gentoo.org> layman-2.2.0-r7.ebuild:
  Fix #525896, tests now actually run and fail

*layman-2.2.0-r7 (12 Jan 2015)

  12 Jan 2015; Devan Franchini <twitch153@gentoo.org>
  +files/layman-2.2.0-change-for-upstream-ssl-fetch.patch,
  +layman-2.2.0-r7.ebuild, -layman-2.2.0-r6.ebuild,
  files/layman-2.2.0-adds-kwargs-debug.patch:
  Adds patch to bring layman-2.2.0 up to date for ssl-fetch, bug #536280

*layman-2.2.0-r6 (12 Jan 2015)

  12 Jan 2015; Devan Franchini <twitch153@gentoo.org>
  +files/layman-2.2.0-adds-kwargs-debug.patch, +layman-2.2.0-r6.ebuild,
  -layman-2.2.0-r5.ebuild:
  Adds patch to fix bug #536280, bumps layman to 2.2.0-r6

  23 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> layman-2.2.0-r5.ebuild:
  Add ~sparc keyword wrt bug #524040

  23 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> layman-2.2.0-r5.ebuild:
  Add ~alpha keyword wrt bug #524040

  09 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> layman-2.2.0-r5.ebuild:
  Add ~ia64 keyword wrt bug #524040

*layman-2.2.0-r5 (18 Oct 2014)

  18 Oct 2014; Devan Franchini <twitch153@gentoo.org> +layman-2.2.0-r5.ebuild,
  -layman-2.2.0-r4.ebuild, files/layman-2.2.0-removes-doctest-remnants.patch:
  Removes dtest.py in src_prepare() instead of patch, bug #525806

  18 Oct 2014; Devan Franchini <twitch153@gentoo.org>
  files/layman-2.2.0-removes-doctest-remnants.patch:
  Fixes patch to remove doctest remnants

*layman-2.2.0-r4 (18 Oct 2014)

  18 Oct 2014; Devan Franchini <twitch153@gentoo.org>
  +files/layman-2.2.0-removes-doctest-remnants.patch, +layman-2.2.0-r4.ebuild,